syntax = "proto3";

package test;
import "proto/student/student.proto";

option go_package = "github.com/f3rcho/grpc-pro/proto/test";

message Test {
  string id = 1;
  string name = 2;

}

message GetTestRequest {
  string id = 1;
}

message SetTestResponse {
  string id = 1;
  string name = 2;
}

message Question {
  string id = 1;
  string answer = 2;
  string question = 3;
  string test_id = 4;
}

message SetQuestionResponse {
  bool ok = 1;
}

message EnrollmentRequest {
  string student_id = 1;
  string test_id = 2;
}

message GetStudentsPerTestRequest {
  string test_id = 1;
}

message TakeTestRequest {
  string answer = 1;
}

service TestService {
  rpc GetTest(GetTestRequest) returns (Test);
  rpc SetTest(Test) returns (SetTestResponse);
  rpc SetQuestions(stream Question) returns (SetQuestionResponse);

  rpc EnrollStudents(stream EnrollmentRequest) returns (SetQuestionResponse);
  rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student);
  rpc TakeTest(stream TakeTestRequest) returns (stream Question);
}